info: Fix build when Wayland is disabled

https://bugzilla.gnome.org/show_bug.cgi?id=774324